--- a/ModelGraph/ModelGraph/Controls/SymbolEdit/SymbolEditControl.xaml
+++ b/ModelGraph/ModelGraph/Controls/SymbolEdit/SymbolEditControl.xaml
@@ -222,12 +222,19 @@
             </Grid>
 
             <Grid Grid.Column="1" Background="DarkSlateGray">
-                    <canvas:CanvasControl x:Name="EditorCanvas"  Width="560" Height="560" VerticalAlignment="Top"
+                <canvas:CanvasControl x:Name="EditorCanvas"  Width="560" Height="560" VerticalAlignment="Top"
                         Draw="EditorCanvas_Draw"
                         Loaded="EditorCanvas_Loaded" 
                         PointerMoved="EditorCanvas_PointerMoved"
                         PointerPressed="EditorCanvas_PointerPressed"
-                        PointerReleased="EditorCanvas_PointerReleased" />
+                        PointerReleased="EditorCanvas_PointerReleased">
+                    <canvas:CanvasControl.KeyboardAccelerators>
+                        <KeyboardAccelerator Key="Up" Invoked="KeyboardAccelerator_Invoked"/>
+                        <KeyboardAccelerator Key="Down" Invoked="KeyboardAccelerator_Invoked"/>
+                        <KeyboardAccelerator Key="Left" Invoked="KeyboardAccelerator_Invoked"/>
+                        <KeyboardAccelerator Key="Right" Invoked="KeyboardAccelerator_Invoked"/>
+                    </canvas:CanvasControl.KeyboardAccelerators>
+                </canvas:CanvasControl>
             </Grid>
 
             <Grid Grid.Column="2" Background="DarkSlateGray" Margin="8,0,4,0" >
